Font and spacing fix

--- a/wp-content/themes/academyAfrica/assets/css/src/main.scss
+++ b/wp-content/themes/academyAfrica/assets/css/src/main.scss
@@ -12,3 +12,7 @@
 a {
     text-decoration: none !important;
 }
+body {
+    font-family: Open Sans;
+}
+  
