--- a/wp-content/themes/academyAfrica/assets/css/src/widgets/hero.scss
+++ b/wp-content/themes/academyAfrica/assets/css/src/widgets/hero.scss
@@ -158,7 +158,7 @@ $font-family_3: Open Sans;
         box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1);
 
         .metrics {
-          gap: 80px;
+          // gap: 80px;
         }
       }
     }
@@ -166,7 +166,7 @@ $font-family_3: Open Sans;
     @include media-breakpoint-up(large) {
       margin-top: -190px;
       max-width: 1144px;
-      gap: 80px;
+      // gap: 80px;
 
       .metrics-content {
         margin: unset;
